cabal-version:       2.2
name:                jaeger-client
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  exposed-modules:     Jaeger
  other-modules:       Collector_Iface
                       Jaeger_Consts
                       Collector_Client
                       Collector
                       Jaeger_Types
                       Agent
                       Agent_Iface
                       Agent_Types
                       Zipkincore_Types
                       Jaeger.Carrier
                       Jaeger.Tracer
                       Jaeger.Types
  other-extensions:    DeriveDataTypeable, DeriveGeneric, OverloadedStrings
  build-depends:       QuickCheck >= 2.11.3,
                       base,
                       bytestring >= 0.10.8.2,
                       cereal >= 0.5.7.0,
                       clock >= 0.7.2,
                       containers >= 0.5.11.0,
                       hashable >= 1.2.7.0,
                       network >= 2.6.3.6,
                       random >= 1.1,
                       text >= 1.2.3.1,
                       thrift,
                       time >= 1.8.0.2,
                       unordered-containers >= 0.2.9.0,
                       vector >= 0.12.0.2,
                       http-types >= 0.12.2,
                       serialise >= 0.2.0.0,
                       base64-bytestring >= 1.0.0.2,
                       base16-bytestring >= 0.1.1.6
  hs-source-dirs:      src, src-gen
  default-language:    Haskell2010

Test-Suite test-jaeger-client
    type:       exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:    Test.hs
    other-extensions:    OverloadedStrings
    build-depends: base
                 , async
                 , bytestring
                 , http-types
                 , jaeger-client
                 , text
                 , hspec
                 , hspec-discover
