cabal-version:       2.2

name:                wai-opentracing
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  exposed-modules:     Network.Wai.Middleware.OpenTracing
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , bytestring >= 0.10.8.2
                     , http-types >= 0.12.2
                     , jaeger-client
                     , text >= 1.2.3.1
                     , wai >= 3.2.1.2
                     , cryptonite >= 0.24
  hs-source-dirs:      src
  default-language:    Haskell2010


Test-Suite test-wai-opentracing
    type:       exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:    Test.hs
    build-depends: base
                 , bytestring
                 , http-types
                 , jaeger-client
                 , text
                 , hspec
                 , hspec-discover
                 , wai-opentracing
                 , wai-extra
                 , wai
